# AdaptiveAlpha-GitHub

./: .env.example  .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  WALK_FORWARD_VALIDATION.md  fix_system.sh  pyproject.toml  requirements-dev.txt  requirements.txt
config/: agents.yaml
docs/: PROJECT_DOCUMENTATION.md  PRO_DOCS.md
scripts/setup/: project.sh
scripts/utils/: agent_loop.sh  analyze_walk_forward_results.py  auto_improve_loop.sh  auto_llm_finetune.sh  auto_mcp_self_heal.sh  auto_patch_loop.py  auto_start_all.sh  auto_verify.py  data_manager.sh  download_2024_data.sh  download_2024_timeframe.sh  ensure_data.sh  export_ml_logs_to_jsonl.py  guard.sh  health.sh  kraken_ohlcv_fetcher.py  llm_health_check.sh  llm_logger.py  llm_orchestrator.py  maintenance.sh  minimal_mcp_server.py  ollama_api.py  ollama_full_reset_and_connect.sh  ollama_reset_and_verify.sh  package_for_ai_review.py  parse_report.py  patch_verifier.py  print_learning_log_summary.py  random_update_kraken_data.py  realistic_test_runner.sh  run_all_tests.sh  run_backtest.sh  run_healing_agents.sh  run_walk_forward_validation.sh  safe_run.sh  setup_realistic_validation.sh  simple_validation.sh  smart_realistic_validation.sh  smoke_test.sh  start_all_servers.sh  (+14 more)
src/agents/system/: error_medic_agent.py  orchestrator_agent.py
src/services/: llm_client.py
strategies/: SimpleAlwaysBuySell.py
tests/fixtures/: test_mcp_memory_client.py
user_data/: agent_memory.json  realistic_test_report.txt  simple_validation_ranges.txt  walk_forward_periods.sh
user_data/simple_validation_results/: training_log.txt  validation_log.txt
user_data/walk_forward_results/: validation_summary.txt
(+22 files in other folders)
